--- a/scss/variables/_variables.scss
+++ b/scss/variables/_variables.scss
@@ -6,3 +6,4 @@ $phoneWidth: 320px;
 //colors
 $athens-gray: #eeecf1;
 $apple: #5ebb46;
+$lochmara: #4daaf0;
